force-app/main/default/objects/Meeting_Expense__c/Meeting_Expense__c.object-meta.xml
<CustomObject>
    <label>Meeting Expense</label>
    <nameField>
        <displayFormat>ME-{00000}</displayFormat>
        <label>Meeting Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>