force-app/main/default/objects/Meeting_Expense__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Meeting Expenses (Budget)</relationshipLabel>
    <relationshipName>Meeting_Expenses_Budget</relationshipName>
    <type>Lookup</type>
</CustomField>