force-app/main/default/objects/Meeting_Expense__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Expense_Category__c</referenceTo>
    <relationshipLabel>Meeting Expenses (Category)</relationshipLabel>
    <relationshipName>Meeting_Expenses_Category</relationshipName>
    <type>Lookup</type>
</CustomField>