force-app/main/default/objects/Meeting_Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Type Record</label>
    <referenceTo>Expense_Type__c</referenceTo>
    <relationshipLabel>Meeting Expenses</relationshipLabel>
    <relationshipName>Meeting_Expenses_Type</relationshipName>
    <type>Lookup</type>
</CustomField>