force-app/main/default/objects/Meeting_Expense__c/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Item</label>
    <referenceTo>Expense_Line_Item__c</referenceTo>
    <relationshipLabel>Meeting Expenses (Line Item)</relationshipLabel>
    <relationshipName>Meeting_Expenses_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>