force-app/main/default/objects/Meeting_Expense__c/fields/No_Of_Allocations__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Allocations__c</fullName>
    <label>No Of Allocations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>