force-app/main/default/objects/Meeting_Expense__c/recordTypes/Actual.recordType-meta.xml
<RecordType>
    <fullName>Actual</fullName>
    <active>true</active>
    <label>Actual</label>
</RecordType>